--- a/style.css
+++ b/style.css
@@ -28,9 +28,14 @@ header {
     margin: 0;
 }
 
-.logo {
+#logo{
+    width: 10vw;
+    height: auto;
+}
+
+.headerText{
+    font-size: clamp(10px, 2.5vw, 48px); 
     font-weight: 700;
-    font-size: 2vw;
 }
 
 button{
@@ -64,7 +69,7 @@ button:hover{
 }
 
 h2{
-    font-size: 2.5vw; 
+   font-size: clamp(15px, 3vw, 48px); 
     margin: 2vw;
 }
 
@@ -109,22 +114,27 @@ a:hover{
 }
 
 .infoSectionInfo{
-    font-size: 1.5vw; 
+    font-size: clamp(15px, 2vw, 48px); 
     display: flex;
     justify-content: space-around;
+    align-items: center;
     padding-left: 3vw;
     padding-right: 3vw;
 }
 
 .furtherInfoPic{
      width: 20%;
-     height: auto;
+     height: min-content;
 }
 
-.infeSectionText{
+.infoSectionText{
     margin-right: 4vw;
-     border-radius: 25px;
-     padding: 2vw;
+    border-radius: 25px;
+    padding: 2vw;
     background-color: rgb(240, 180, 103);
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.infoSectionText:hover{
+    background-color: rgb(235, 159, 59);
 }
